# docker-logfire

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/docker_logfire/: config.py  container_monitor.py  log_forwarder.py  main.py
